# django-rest-framework-filters

./: setup.cfg  tox.ini
rest_framework_filters/: backends.py  compat.py  filterset.py
tests/testapp/: urls.py
